
-Upgraded to zingchart v2.9.12

-v6.00.16 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.15 OR LOWER.

-v6.00.8 AND HIGHER MIGRATES / UPGRADES ANY SET COOKIE DATA TO A MORE SECURE / RELIABLE FORMAT, ONE-TIME DURING UPGRADES FROM V6.00.7 OR LOWER.

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.22:

-BUG FIX: Desktop and Server Editions were improperly packaged with outdated code in the v6.00.21 version (sorry!)

-v6.00.16 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.15 OR LOWER.

-v6.00.8 AND HIGHER MIGRATES / UPGRADES ANY SET COOKIE DATA TO A MORE SECURE / RELIABLE FORMAT, ONE-TIME DURING UPGRADES FROM V6.00.7 OR LOWER.

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.23:

-BUG FIX: Miscellaneous fixes

-Support for PHPbrowserBox (new / more reliable app container for Windows Desktop Editions)

-More reliable system checks (during preflight checks) for missing PHP extensions

-Miscellaneous user experience improvements

-Better Desktop Editions support

-More reliable text resizing

-Code optimization / cleanup

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.24:

-BUG FIX: Miscellaneous fixes

-Auto-pruning of bitcoin (primary) currency / (secondary) crypto pairing markets user configs, IF markets don't exist in assets config

-Added more fiat currency markets (to offset localbitcoins shutting down)

-Removed localbitcoins support (they went out of business)

-Miscellaneous user experience improvements

-More reliable page zooming / resizing

-Added Bitcoin NFT tracking support

-------------------------------------------------------------------








