@@ -10,13 +10,7 @@ NEXT SCHEDULED WORK SESSIONS (*BOTH* DEBUGGING AND / OR INFRASTRUCTURE)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-For alphavantage to get more stock prices, we need to count the total amount of stocks listed during init of the app, and DYNAMICALLY SET CACHE TIME FOR DATA TO THIS FORMULA: 
-
-$max_daily_requests = floor( $ct_conf['other_api']['alphavantage_per_day_limit'] / [number of assets] );
-
-$cache_time_per_asset = floor( ( 24 / $max_daily_requests ) * 60 );
-
-Then we just pull cached data, until we are allowed to update each asset. This should also work fine with our minute / hourly throttling limits, BUT KEEP AN EYE ON IT AFTER IMPLEMENTATION [preferred to keep it simple this way if it handles a lot of assets ok].
+KEEP AN EYE ON the new alphavantage throttling logic, make sure we can sucessfully have a large amount of assets being updated daily now.
 
 
 The tags 'h1' through 'h6' should be made to user-adjust text size too. (CONFIRMED IT WILL be a bit tricky, be careful (set them via 'em' like bootstrap does)...ISOLATE BASED ON OUR TEMPLATE WRAPPER CSS ELEMENTS).
