@@ -25,12 +25,12 @@ background-color: #dbd9d9 !important;
 }
 
 
-button, input[type=submit], input[type=button], input::file-selector-button, .force_button_style {
+button:not(.btn-number), input[type=submit], input[type=button], input::file-selector-button, .force_button_style {
   background-color: #42484e !important;
 }
 
 
-button:not(.modaal-close):not(.accordion-button), input[type=submit], input[type=button], input::file-selector-button, .force_button_style {
+button:not(.modaal-close):not(.accordion-button):not(.btn-number), input[type=submit], input[type=button], input::file-selector-button, .force_button_style {
   border: 0.2em solid #999999 !important;
 }
 
